# LangjamKovyl

./: AllFeatures.kvl  README.md  chat.kvl  kovyl.sublime-syntax  nim.cfg
ChompoC/: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  README_RU.md
ChompoC/.github/workflows/: ci.yml  wiki-sync.yml
ChompoC/docs/wiki/: Arrays-and-Strings.md  Built-in-Functions.md  Functions-and-Scopes.md  Getting-Started.md  Home.md  Input-and-Output.md  LangJam-Chat.md  Language-Syntax.md  Network-API.md  Runtime-Architecture.md  Runtime-and-Performance.md  Types-and-Operators.md  _Sidebar.md
ChompoC/langjam/Chompo/: LANGUAGE.md  README.md  chat_client.chmp  chat_server.chmp
ChompoC/src/: config.h  main.cpp
ChompoC/src/interpreter/: callable.cpp  callable.h  collection_builtins.cpp  environment.cpp  environment.h  interpreter.cpp  interpreter.h  io_builtins.cpp  io_manager.cpp  io_manager.h  loop_signal.h  network_builtins.cpp  network_manager.cpp  network_manager.h  return_signal.h  runtime_error.cpp  runtime_error.h  secure_channel.cpp  secure_channel.h  secure_network_builtins.cpp  system_builtins.cpp  terminal_builtins.cpp  terminal_manager.cpp  terminal_manager.h  value.cpp  value.h
ChompoC/src/lexer/: lexer.cpp  lexer.h  symbol.cpp  symbol.h  token.cpp  token.h
ChompoC/src/parser/: ast.h  ast_printer.cpp  ast_printer.h  parser.cpp  parser.h  resolver.cpp  resolver.h
ChompoC/tests/: chat_smoke.py  network_manager_test.cpp  run_args_suite.cmake  run_case.cmake  run_error_suite.cmake  run_io_suite.cmake  test_code.chmp
ChompoC/tests/cases/: arrays.chmp  basic.chmp  break_inside_nested_function.chmp  collections.chmp  control_flow_fast.chmp  direct_array_cycle.chmp  for_in.chmp  functions.chmp  in_invalid_container.chmp  in_invalid_string_needle.chmp  indirect_array_cycle.chmp  loops.chmp  maps.chmp  membership.chmp  pop_invalid_target.chmp  push_cycle.chmp  push_invalid_target.chmp  regression.chmp  remove_at_invalid_index.chmp  remove_at_invalid_target.chmp  resolver_slots.chmp  stack_overflow.chmp  updates.chmp
ChompoC/tests/expected/: arrays.txt  basic.txt  break_outside_loop.txt  collections.txt  continue_outside_loop.txt  control_flow_fast.txt  for_in.txt  functions.txt  in_invalid_container.txt  in_invalid_string_needle.txt  indirect_array_cycle.txt  loops.txt  maps.txt  membership.txt  pop_invalid_target.txt  push_cycle.txt  push_invalid_target.txt  regression.txt  remove_at_invalid_index.txt  remove_at_invalid_target.txt  resolver_slots.txt  stack_overflow.txt  updates.txt
ChompoC/tests/performance/: README.md  run_performance_suite.py
ChompoC/tests/performance/cases/: arithmetic.chmp  arrays.chmp  control_flow.chmp  functions.chmp  scope_lookup.chmp
Kovyl/: LICENCE  README.md  kovyl.nimble  kovyl.sublime-syntax  nimble.paths
Kovyl/examples/: AllFeatures.kvl  chat.kvl
Kovyl/src/: kovyl.nim
Kovyl/src/core/: astnodes.nim  errors.nim  lexer.nim  parser.nim  tokens.nim  types.nim
Kovyl/src/utils/: semanticAnalyzerUtils.nim
cl++/: .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json
cl++/examples/: array.clx  baseMath.clx  comments.clx  concatination.clx  condition.clx  forinloop.clx  hello.clx  logic.clx  loop.clx  main.clx  return.clx  server.clx  tuple.clx
cl++/projects/chat/: auth.clx  auth.erl  chat_room.clx  chat_room.erl  clean_input.clx  clean_input.erl  clear_screen.clx  clear_screen.erl  db.clx  db.erl  main.clx  main.erl  menu.clx  menu.erl  receive_input.clx  receive_input.erl  server.clx  server.erl
cl++/src/: clx_std.erl  codegen.ts  grammar.peggy  index.ts  semantic.ts  stdlib.ts
cl++/src/types/: ast.ts
cl++/src/utils/: exitWithError.ts
cl++/vscode_extension/: clx-0.1.0.vsix  package.json
ftorlisp/: .gitignore  Ftorlisp.lean  Main.lean  README.md  devlog.md  lake-manifest.json  lakefile.lean  main.erl  my_program.erl  prelude.lisp  spec.org  stdlib.erl
ftorlisp/Ftorlisp/: Codegen.lean  Context.lean  Eval.lean  FirstParser.lean  Fn.lean  OpTypes.lean  ParseTree.lean  ParserCombinators.lean  SecondParser.lean  Ty.lean  TyAST.lean  TyInference.lean  UnTyAST.lean
ftorlisp/Stdlib/: stdlib.ftl
ftorlisp/examples/: main.ftl
graft-lang/: .gitignore  Makefile  README.md  SPECS.md  go.mod
graft-lang/cmd/graftc/: main.go
graft-lang/codegen/: codegen_test.go  erlang.go
graft-lang/demos/: break_test.gft  continue_test.gft  echo.gft  for_loop.gft  functions.gft  hello.gft  if_chain.gft  if_else.gft  input_test.gft  list_last.gft  map_test.gft  mod_test.gft  nested_fn.gft  return_nested.gft  string_ops.gft  strings.gft  struct_test.gft  while.gft
graft-lang/examples/: chat.gft
graft-lang/lexer/: lexer.go  lexer_test.go
graft-lang/parser/: ast.go  parser.go  parser_test.go
graft-lang/scripts/: clean.sh  install.sh
py-plus-plus/: .gitignore  README.md  README_LANGJAM  pyplusplus.sublime-syntax  pypp_runner.py  pyproject.toml
py-plus-plus/docs/: README.md
py-plus-plus/docs/language/: README.md  semantics.md  syntax.md  usage.md
py-plus-plus/examples/chat/: flask_chat.pypp
py-plus-plus/examples/imports/: from_use_example.pypp  module_example.pypp  module_example_py.py  py_import_example.pypp  pyc_import_example.pypp  use_example.pypp
py-plus-plus/examples/macros/: macro_if.pypp  macro_repeat.pypp
py-plus-plus/examples/semantics/: classes_and_when.pypp  control_flow.pypp
py-plus-plus/examples/syntax/: functions.pypp  hello_world.pypp
py-plus-plus/libs_pypp/: std.pypp
py-plus-plus/pyplusplus/: __init__.py  ast_nodes.py  cli.py  compiler.py  def.py  lexer.py  parser.py  pypp_errors.py
py-plus-plus/pyplusplus.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
py-plus-plus/tests/: test_compilation.py  test_parser.py
src/core/: astnodes.nim  errors.nim  lexer.nim  parser.nim  tokens.nim  types.nim
src/core/visitors/: ASTPrinterVisitor.nim  InterpreterVisitor.nim  SemanticAnalyzerVisitor.nim
src/utils/: semanticAnalyzerUtils.nim  strerr.nim
ygvm/: README.md
ygvm/examples/: chat.yg  full.yg  hello.yg  sockets.yg
ygvm/src/: main.rs
ygvm/src/syntax/: lexer.rs  (+1 more)
(+15 files in other folders)
