[project]
name = "pyplusplus"
version = "0.1.0"
description = "Py++ language toolkit that parses code into Python AST."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["pyplusplus", "language", "parser", "python-ast"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
pypp = "pyplusplus.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
